--- a/views/home.pug
+++ b/views/home.pug
@@ -12,7 +12,15 @@ html(lang="en")
         //- Nav
         header 
             a(href="") 
-                h1(class="text-6xl") 코딩나라
+                h1(class="text-6xl" align="center") Coding nara
+                br
+                br
+                br
+                br
+                br
+                br
+                br
+                br
 
         //- Content
         main(class="flex flex-row justify-center mx-auto")
@@ -28,13 +36,13 @@ html(lang="en")
                 div(class="flex justify-start h-screen")
 
                     //- Remote Video
-                    video#peersFace(autoplay, playsinline, class="mx-auto w-4/5 border-4 border-black")
+                    video#peersFace(autoplay, playsinline, class="mx-auto w-4/5 border-4 border-transparent")
                     div(class="flex flex-col w-1/5 h-full")
                         div#myStream(class="w-full")
                             div(class="border-4 border-l-0 border-black")
 
                                 //- Local Video
-                                video#myFace(autoplay, muted, playsinline, width="400", height="400" class="mx-auto border-b-4 border-black myFace bg-gray-500" )
+                                video#myFace(autoplay, muted, playsinline, width="300", height="300" class="mx-auto border-b-4 border-black myFace bg-gray-500" )
                                 //- Control
                                 div(class="flex flex-col w-full mx-auto justify-center")
                                     button#mute(class="border-4 border-black m-px") 음소거
