회원가입시 이메일 검증 및 비밀번호 검증, 추천인 아이디 판별 등 외에 세부 기능 추가

--- a/views/auth_login_main.ejs
+++ b/views/auth_login_main.ejs
@@ -83,7 +83,7 @@
                         <form action="/auth/login_process" id="contactForm" method="post">
                             <!-- Name input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="name" type="text" name="Login_ID" placeholder="Enter your name..." data-sb-validations="required" />
+                                <input class="form-control" id="name" type="text" name="Email_Address" placeholder="Enter your name..." data-sb-validations="required" />
                                 <label for="name">아이디</label>
                                 <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
                             </div>
