--- a/views/auth/auth_register_naver.ejs
+++ b/views/auth/auth_register_naver.ejs
@@ -138,14 +138,12 @@
                   type="text"
                   placeholder="Enter your name..."
                   data-sb-validations="required"
-                  required
+                  value="<%-Nickname%>"
+                  disabled
                 />
                 <label for="name"
                   >이름<span class="text-danger"> *</span></label
                 >
-                <div class="invalid-feedback" data-sb-feedback="name:required">
-                  A name is required.
-                </div>
               </div>
               <!-- Email address input-->
               <div class="form-floating mb-3">
@@ -153,110 +151,69 @@
                   id="EA"
                   name="EA"
                   type="email"
+                  value="<%-Email%>"
+                  disabled
                   class="form-control form-control-lg inverse-mode"
                   data-parsley-error-message="null"
                   placeholder="name@example.com"
                   data-sb-validations="required,email"
-                  required
                 />
                 <label class="control-label"
                   >이메일<span class="text-danger"> *</span>
                 </label>
-                <div class="invalid-feedback" data-sb-feedback="email:required">
-                  An email is required.
-                </div>
-                <div class="invalid-feedback" data-sb-feedback="email:email">
-                  Email is not valid.
-                </div>
-                <input
-                  id="CEA"
-                  name="CEA"
-                  type="text"
-                  class="form-control form-control-lg inverse-model mt-3 d-none"
-                  data-parsley-error-message="null"
-                  data-parsley-errors-container="#err-msg2"
-                />
-                <div
-                  class="d-flex justify-content-between align-items-center mt-2"
-                >
-                  <div id="err-msg2" class="text-realred"></div>
-                  <input
-                    type="button"
-                    id="sendBtn"
-                    class="btn btn-primary btn-block btn-lg ml-auto custombtn"
-                    value="인증번호 요청"
-                    onclick="emailSend('EA')"
-                  />
-                  <input
-                    type="button"
-                    id="cerBtn"
-                    class="btn btn-primary btn-block btn-lg mt-0 ml-auto custombtn d-none"
-                    value="인증하기"
-                    onclick="emailCer('CEA')"
-                  />
-                  <input type="hidden" id="hideCK" name="hideCK" value="" />
-                </div>
               </div>
               <!-- password input-->
-              <div class="row g-2">
-                <div class="col-md">
-                  <div class="form-floating">
-                    <input
-                      class="form-control"
-                      id="pwd"
-                      name="pwd"
-                      type="password"
-                      placeholder="Enter your name..."
-                      data-sb-validations="required"
-                      required
-                    />
-                    <label for="name"
-                      >비밀번호<span class="text-danger"> *</span></label
-                    >
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="name:required"
-                    >
-                      A name is required.
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md">
-                  <div class="form-floating">
-                    <input
-                      class="form-control"
-                      id="pwd2"
-                      name="pwd2"
-                      type="password"
-                      placeholder="Enter your name..."
-                      data-sb-validations="required"
-                      required
-                    />
-
-                    <label for="name"
-                      >비밀번호 재확인<span class="text-danger"> *</span></label
-                    >
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="name:required"
-                    >
-                      A name is required.
-                    </div>
-                  </div>
-                </div>
-              </div>
               <div class="form-floating mb-3">
-                <div
-                  class="d-flex justify-content-between align-items-center mt-2"
-                >
-                  <div id="err-msg3" class="text-realred"></div>
-                  <input
-                    type="button"
-                    id="sendBtn"
-                    class="btn btn-primary btn-block btn-lg ml-auto custombtn"
-                    value="비밀번호 검증"
-                    onclick="chkPW()"
-                  />
+                <div class="row g-2">
+                  <div class="col-md">
+                    <div class="form-floating">
+                      <input
+                        class="form-control"
+                        id="pwd"
+                        name="pwd"
+                        type="password"
+                        value="***************"
+                        placeholder="Enter your name..."
+                        data-sb-validations="required"
+                        disabled
+                      />
+                      <label for="name"
+                        >비밀번호<span class="text-danger"> *</span></label
+                      >
+                      <div
+                        class="invalid-feedback"
+                        data-sb-feedback="name:required"
+                      >
+                        A name is required.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md">
+                    <div class="form-floating">
+                      <input
+                        class="form-control"
+                        id="pwd2"
+                        name="pwd2"
+                        type="password"
+                        placeholder="Enter your name..."
+                        data-sb-validations="required"
+                        value="***************"
+                        disabled
+                      />
+
+                      <label for="name"
+                        >비밀번호 재확인<span class="text-danger">
+                          *</span
+                        ></label
+                      >
+                      <div
+                        class="invalid-feedback"
+                        data-sb-feedback="name:required"
+                      >
+                        A name is required.
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
               <!-- Phone number input-->
@@ -270,14 +227,12 @@
                   maxlength="13"
                   placeholder="010-1234-5678"
                   data-sb-validations="required"
-                  required
+                  value="<%=Mobile%>"
+                  disabled
                 />
                 <label for="phone"
                   >전화번호<span class="text-danger"> *</span></label
                 >
-                <div class="invalid-feedback" data-sb-feedback="phone:required">
-                  A phone number is required.
-                </div>
               </div>
               <!-- address input-->
               <div class="row g-2">
@@ -290,6 +245,7 @@
                       type="text"
                       placeholder="Zip Code"
                       required
+                      readonly
                       onclick="findAddr()"
                     />
                     <label for="phone"
@@ -312,6 +268,7 @@
                       type="text"
                       placeholder="Address"
                       required
+                      readonly
                       onclick="findAddr()"
                     />
                     <label for="phone"
