--- a/CSS/styles_none.css
+++ b/CSS/styles_none.css
@@ -11713,6 +11713,7 @@ hr.divider-light {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   color: #212529;
+  
 }
 #mainNav .navbar-nav .nav-item .nav-link {
   color: #6c757d;
@@ -11733,23 +11734,22 @@ hr.divider-light {
     background-color: transparent;
   }
   #mainNav .navbar-brand {
-    color: rgba(255, 255, 255, 0.7);
+    color : #212529;
   }
   #mainNav .navbar-brand:hover {
-    color: #fff;
+    color: #f4623a;
   }
   #mainNav .navbar-nav .nav-item .nav-link {
-    text-align: center;
-    color: rgba(255, 255, 255, 0.7);
+    color : #212529;
     padding: 0 1rem;
   }
   #mainNav .navbar-nav .nav-item-none .nav-link-none {
     text-align: center;
-    color: black;
+    color: #fff;
     padding: 0 1rem;
   }
   #mainNav .navbar-nav .nav-item .nav-link:hover {
-    color: #fff;
+    color: #f4623a;
   }
   #mainNav .navbar-nav .nav-item:last-child .nav-link {
     padding-right: 0;
