--- a/views/lecture_list.ejs
+++ b/views/lecture_list.ejs
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login TEST - ${title}</title>
+    <title>Login TEST - <%=Title%></title>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap Icons-->
@@ -30,51 +26,15 @@
       rel="stylesheet"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../CSS/styles_none.css" rel="stylesheet" />
+    <link href="../CSS/styles.css" rel="stylesheet" />
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-1.12.4.min.js"
     ></script>
     <script
-    type="text/javascript"
-    src="../js/email_validation_and_address_script.js"
-  ></script>
-    <script
       type="text/javascript"
       src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"
     ></script>
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      .bi {
-        vertical-align: -0.125em;
-        fill: currentColor;
-      }
-      a.change:link {
-        color : white;
-      }
-      a.change:visited {
-        color :white;
-      }
-      a.change:hover {
-        color : white;
-      }
-      a.change:active {
-        color : white;
-      } 
-    </style>
   </head>
   <body>
     <div class="loader-wrapper">
@@ -126,110 +86,26 @@
         </div>
       </div>
     </nav>
-  </br>
-  </br>
-  </br>
-    <main class="container">
-      <div class="p-4 p-md-1 mb-1 rounded text-bg-dark">
-        <div class="col-md-6 px-0">
-          <h1 class="display-6 fst-italic">
-            Welcome to Codingnara
-          </h1>
-          <p class="lead my-4">
-            <%=Name%>님 환영합니다.
-          </p>
-        </div>
-      </div>
-
-      <div class="row mb-2">
-        <div class="col-md-6">
-          <div
-            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
-          >
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-primary"
-                ><i class="bi bi-piggy-bank fs-1 text-primary"></i>
-              </strong>
-              <h3 class="mb-0">포인트</h3>
-              <div class="mb-1 text-muted">-----------------------------</div>
-              <p class="card-text mb-auto text-muted">
-                다양한 이벤트에서 포인트를 적립하여 수강신청시 사용할 수
-                있습니다.
-              </p>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <svg
-                class="bd-placeholder-img"
-                width="200"
-                height="250"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder: Thumbnail"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
-              >
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c" />
-                <text
-                  x="50%"
-                  y="50%"
-                  fill="#eceeef"
-                  dy=".5em"
-                  style="font-size: 25px"
-                >
-                  ₩30,000
-                </text>
-              </svg>
-            </div>
+    <!-- Masthead-->
+    <header class="masthead_review">
+      <div class="container px-4 px-lg-5 h-100">
+        <div
+          class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center"
+        >
+          <div class="col-lg-8 align-self-end">
+            <h1 class="text-white font-weight-bold">강의 리스트</h1>
+            <hr class="divider" />
           </div>
-        </div>
-        <div class="col-md-6">
-          <div
-            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
-          >
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-success"
-                ><i class="bi bi-lock-fill fs-2 text-primary"></i
-              ></strong>
-              <h3 class="mb-0">개인 정보</h3>
-              <div class="mb-1 text-muted">-----------------------------</div>
-              <p class="card-text mb-auto text-muted">
-                개인정보를 수정하고 싶다면 아래 링크를 클릭해 본인임을 인증해 주세요.
-              </p>
-              <a href="/myinfo/user_information_change">인증</a>
-            </div>
-            <div class="col-auto d-none d-lg-block"  style="color:white">
-              <a
-              href="/myinfo/update" 
-              >
-                <svg
-                  class="bd-placeholder-img"
-                  width="200"
-                  height="250"
-                  xmlns="http://www.w3.org/2000/svg"
-                  role="img"
-                  aria-label="Placeholder: Thumbnail"
-                  preserveAspectRatio="xMidYMid slice"
-                  focusable="false"
-                >
-                  <rect width="100%" height="100%" fill="#55595c" style="color:white" />
-                  <text
-                    x="50%"
-                    y="50%"
-                    fill="#eceeef"
-                    dy=".5em"
-                    style="font-size: 25px;"
-                  >
-                    변경
-                  </text>
-                </svg>
-              </a>
-            </div>
+          <div class="col-lg-8 align-self-baseline">
+            <p class="text-white-75 mb-5">
+              우리 아이에 적합한 교육 서비스를 경험해보세요
+            </p>
+            <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
           </div>
         </div>
       </div>
-    </main>
-    
+    </header>
+    <p></p>
     <section class="notice">
       <div class="page-title">
         <div class="container">
@@ -276,11 +152,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- SimpleLightbox plugin JS-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
-  <script src="../js/scripts.js"></script>
-
   <!-- Core theme JS-->
+  <script src="../js/scripts.js"></script>
   <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
   <!-- * *                               SB Forms JS                               * *-->
   <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
   <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+  <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </html>
