--- a/views/review_page_root.ejs
+++ b/views/review_page_root.ejs
@@ -92,9 +92,18 @@
         <div
           class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center"
         >
-          <div class="col-lg-8 align-self-end">
-            <h1 class="text-white font-weight-bold">강좌후기</h1>
-            <hr class="divider" />
+          <div
+            class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center"
+          >
+            <div class="col-lg-8 align-self-end">
+              <h1 class="text-white font-weight-bold">강좌후기</h1>
+              <hr class="divider" />
+            </div>
+            <div class="col-lg-8 align-self-baseline">
+              <p class="text-white-75 mb-5">
+                우리 아이에 적합한 교육 서비스를 경험해보세요
+              </p>
+            </div>
           </div>
           <div class="col-lg-8 align-self-baseline">
             <p class="text-white-75 mb-5">
@@ -139,7 +148,25 @@
   <footer class="bg-light py-5">
     <div class="container px-4 px-lg-5">
       <div class="small text-center text-muted">
-        Copyright &copy; 2022 - Company Name
+        <a href="/policy/private">개인정보처리방침</a> |
+        <a href="/policy/tos">이용약관</a>
+      </div>
+    </div>
+    <div class="container px-4 px-lg-5">
+      <div class="small text-center text-muted">
+        코딩나라 | 대표자: 장영재, 박민수 | 사업자번호: 148-14-01860 사업자 정보
+        확인
+      </div>
+    </div>
+    <div class="container px-4 px-lg-5">
+      <div class="small text-center text-muted">
+        주소: 서울특별시 서대문구 북가좌동
+      </div>
+    </div>
+    <br />
+    <div class="container px-4 px-lg-5">
+      <div class="small text-center text-muted">
+        Copyright &copy;코딩나라(Coding-nara)
       </div>
     </div>
   </footer>
