--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -89,6 +89,116 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  
+}
+
+.col_title{
+  margin : 10px 30px 10px 30px;
+}
+.number-circle-list {
+  list-style: none;
+  padding-left: 1rem;
+  counter-reset: circle-counter;
+}
+
+.number-circle-list--list-item {
+  counter-increment: circle-counter;
+  margin-bottom: 0.25rem;
+}
+.number-circle-list--list-item:before {
+  content: counter(circle-counter);
+  background-color: #e1e1e1;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  display: inline-block;
+  font-size: 0.75rem;
+  line-height: 1.5rem;
+  color: black;
+  text-align: center;
+  margin-right: 0.5rem;
+  position: relative;
+  top: -2px;
+}
+.number-circle-list--list-item:last-child {
+  margin-bottom: 0;
+}
+.number-circle-list--list-item .number-circle-list--list-item {
+  margin-left: 0.25rem;
+}
+
+.number-circle-list--primary-color .number-circle-list--list-item:before {
+  background-color: #0d5cab;
+  color: white;
+}
+
+.number-circle-list--secondary-color .number-circle-list--list-item:before {
+  background-color: #72c267;
+  color: white;
+}
+
+.number-circle-list--tertiary-color .number-circle-list--list-item:before {
+  background-color: #168dde;
+  color: white;
+}
+
+html {
+  font-size: 16px;
+}
+
+.container{
+  width: 90%;
+  height: 100%;
+  overflow: hidden;
+}
+.container img{
+  max-width: 100%;
+  height: auto;
+  display: block;
+
+}
+
+
+
+.number-circle-list--list-item {
+  counter-increment: circle-counter;
+  margin-bottom: 0.25rem;
+}
+.number-circle-list--list-item:before {
+  content: counter(circle-counter);
+  background-color: #e1e1e1;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  display: inline-block;
+  font-size: 0.75rem;
+  line-height: 1.5rem;
+  color: black;
+  text-align: center;
+  margin-right: 0.5rem;
+  position: relative;
+  top: -2px;
+}
+.number-circle-list--list-item:last-child {
+  margin-bottom: 0;
+}
+.number-circle-list--list-item .number-circle-list--list-item {
+  margin-left: 0.25rem;
+}
+
+.number-circle-list--primary-color .number-circle-list--list-item:before {
+  background-color: #0d5cab;
+  color: white;
+}
+
+.number-circle-list--secondary-color .number-circle-list--list-item:before {
+  background-color: #72c267;
+  color: white;
+}
+
+.number-circle-list--tertiary-color .number-circle-list--list-item:before {
+  background-color: #168dde;
+  color: white;
 }
 
 
@@ -11818,8 +11928,8 @@ header.masthead_mypage h1, header.masthead_mypage .h1 {
 }
 @media (min-width: 992px) {
   header.masthead_mypage {
-    height: 100vh;
-    min-height: 40rem;
+    height: 20vh;
+    min-height: 20rem;
     padding-top: 4.5rem;
     padding-bottom: 0;
   }
@@ -11850,8 +11960,8 @@ header.masthead_ask h1, header.masthead_ask .h1 {
 }
 @media (min-width: 992px) {
   header.masthead_ask {
-    height: 100vh;
-    min-height: 40rem;
+    height: 20vh;
+    min-height: 20rem;
     padding-top: 4.5rem;
     padding-bottom: 0;
   }
@@ -11882,8 +11992,8 @@ header.masthead_curi h1, header.masthead_curi .h1 {
 }
 @media (min-width: 992px) {
   header.masthead_curi {
-    height: 100vh;
-    min-height: 40rem;
+    height: 20vh;
+    min-height: 20rem;
     padding-top: 4.5rem;
     padding-bottom: 0;
   }
@@ -11914,8 +12024,8 @@ header.masthead_review h1, header.masthead_review .h1 {
 }
 @media (min-width: 992px) {
   header.masthead_review {
-    height: 100vh;
-    min-height: 40rem;
+    height: 20vh;
+    min-height: 20rem;
     padding-top: 4.5rem;
     padding-bottom: 0;
   }
@@ -11946,8 +12056,8 @@ header.masthead_enroll h1, header.masthead_enroll .h1 {
 }
 @media (min-width: 992px) {
   header.masthead_enroll {
-    height: 100vh;
-    min-height: 40rem;
+    height: 20vh;
+    min-height: 20rem;
     padding-top: 4.5rem;
     padding-bottom: 0;
   }
@@ -12009,4 +12119,15 @@ header.masthead_enroll h1, header.masthead_enroll .h1 {
   display:flex;
   flex-direction: row;
   margin-left: 150px;
+}
+.box {
+  width: 150px;
+  height: 150px; 
+  border-radius: 70%;
+  overflow: hidden;
+}
+.profile {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
