--- a/views/user_information_change.ejs
+++ b/views/user_information_change.ejs
@@ -122,7 +122,11 @@
         </div>
         <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
           <div class="col-lg-6">
-            <form id="contactForm" action="/auth/find_pw_process" method="post">
+            <form
+              id="contactForm"
+              action="/myinfo/validate_Mypage_Email"
+              method="post"
+            >
               <!-- Name input-->
               <div class="form-floating mb-3">
                 <input
