--- a/views/my_page_root.ejs
+++ b/views/my_page_root.ejs
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -38,13 +36,15 @@
       src="https://code.jquery.com/jquery-1.12.4.min.js"
     ></script>
     <script
-    type="text/javascript"
-    src="../js/email_validation_and_address_script.js"
-  ></script>
+      type="text/javascript"
+      src="../js/email_validation_and_address_script.js"
+    ></script>
+    <script type="text/javascript" src="../js/mypage.js"></script>
     <script
       type="text/javascript"
       src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"
     ></script>
+    <script type="text/javascript" src="../js/review.js"></script>
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -65,17 +65,17 @@
         fill: currentColor;
       }
       a.change:link {
-        color : white;
+        color: white;
       }
       a.change:visited {
-        color :white;
+        color: white;
       }
       a.change:hover {
-        color : white;
+        color: white;
       }
       a.change:active {
-        color : white;
-      } 
+        color: white;
+      }
     </style>
   </head>
   <body>
@@ -128,18 +128,14 @@
         </div>
       </div>
     </nav>
-  </br>
-  </br>
-  </br>
+    <br />
+    <br />
+    <br />
     <main class="container">
       <div class="p-4 p-md-1 mb-1 rounded text-bg-dark">
         <div class="col-md-6 px-0">
-          <h1 class="display-6 fst-italic">
-            Welcome to Codingnara
-          </h1>
-          <p class="lead my-4">
-            <%=Name%>님 환영합니다.
-          </p>
+          <h1 class="display-6 fst-italic">Welcome to Codingnara</h1>
+          <p class="lead my-4"><%=Name%>님 환영합니다.</p>
         </div>
       </div>
 
@@ -177,14 +173,19 @@
                   y="50%"
                   fill="#eceeef"
                   dy=".5em"
-                  style="font-size: 25px"
-                >
-                  ₩30,000
-                </text>
+                  style="font-size: 30px"
+                  id="point"
+                ></text>
               </svg>
             </div>
           </div>
         </div>
+        <script>
+          var point = '₩ '+JSON.stringify((<%=Point%>).toLocaleString('ko-KR'));
+          point = point.replaceAll("\"", "");
+          document.getElementById("point").innerHTML = point;
+        </script>
+
         <div class="col-md-6">
           <div
             class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
@@ -196,42 +197,46 @@
               <h3 class="mb-0">개인 정보</h3>
               <div class="mb-1 text-muted">-----------------------------</div>
               <p class="card-text mb-auto text-muted">
-                개인정보를 수정하고 싶다면 아래 링크를 클릭해 본인임을 인증해 주세요.
+                개인정보를 수정하고 싶다면 아래 링크를 클릭해 본인임을 인증해
+                주세요.
               </p>
               <a href="/myinfo/user_information_change">인증</a>
             </div>
-            <div class="col-auto d-none d-lg-block"  style="color:white">
-              <a
-              href="/myinfo/update" 
+            <div class="col-auto d-none d-lg-block" style="color: white">
+              <svg
+                id="change_button"
+                class="bd-placeholder-img"
+                width="200"
+                height="250"
+                xmlns="http://www.w3.org/2000/svg"
+                role="img"
+                aria-label="Placeholder: Thumbnail"
+                preserveAspectRatio="xMidYMid slice"
+                focusable="false"
+                onclick="javascript:mypage_list.button_validation()"
               >
-                <svg
-                  class="bd-placeholder-img"
-                  width="200"
-                  height="250"
-                  xmlns="http://www.w3.org/2000/svg"
-                  role="img"
-                  aria-label="Placeholder: Thumbnail"
-                  preserveAspectRatio="xMidYMid slice"
-                  focusable="false"
+                <rect
+                  width="100%"
+                  height="100%"
+                  fill="#55595c"
+                  style="color: white"
+                />
+                <text
+                  x="50%"
+                  y="50%"
+                  fill="#eceeef"
+                  dy=".5em"
+                  style="font-size: 35px"
                 >
-                  <rect width="100%" height="100%" fill="#55595c" style="color:white" />
-                  <text
-                    x="50%"
-                    y="50%"
-                    fill="#eceeef"
-                    dy=".5em"
-                    style="font-size: 25px;"
-                  >
-                    변경
-                  </text>
-                </svg>
-              </a>
+                  변경
+                </text>
+              </svg>
             </div>
           </div>
         </div>
       </div>
     </main>
-    
+
     <section class="notice">
       <div class="page-title">
         <div class="container">
@@ -258,12 +263,45 @@
             </thead>
 
             <tbody>
-              <%-List %>
+              <%-Lecture_List %>
             </tbody>
           </table>
         </div>
       </div>
     </section>
+    <br />
+    <section class="notice">
+      <div class="page-title">
+        <div class="container">
+          <h3>결제 목록</h3>
+        </div>
+      </div>
+
+      <!-- board seach area -->
+
+      <!-- board list area -->
+      <div id="board-list">
+        <div class="container">
+          <table class="board-table">
+            <thead>
+              <tr>
+                <th scope="col" class="th-title">강좌명</th>
+                <th scope="col" class="th-date">강의 시간</th>
+                <th scope="col" class="th-date">결제 횟수</th>
+                <th scope="col" class="th-date">선생님</th>
+                <th scope="col" class="th-date">결제 시간</th>
+                <th scope="col" class="th-date">환불</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <%-Payment_List %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </section>
+
     <p></p>
   </body>
   <!-- Footer-->
