--- a/views/refund_page.ejs
+++ b/views/refund_page.ejs
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login TEST - <%=Title%></title>
+    <title>Login TEST - ${title}</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-     <!-- Favicon-->
-     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-     <!-- Bootstrap Icons-->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-     <!-- Google fonts-->
-     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
-     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
-     <!-- SimpleLightbox plugin CSS-->
-     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
-     <!-- Core theme CSS (includes Bootstrap)-->
-     <link href="/CSS/styles.css" rel="stylesheet" />
-    
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Bootstrap Icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+    <!-- SimpleLightbox plugin CSS-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="../CSS/styles.css" rel="stylesheet" />
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-1.12.4.min.js"
@@ -66,23 +65,19 @@
           </div>
       </div>
   </header>
-  <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">제목</label>
-    <input type="text" name="Title" class="form-control-plaintext" id="exampleFormControlInput1" value="<%=Title%>" readonly>
-  </div>
-  <div class="mb-3">
-    <label placeholder="Title" for="exampleFormControlTextarea1" class="form-label">내용</label>
-    <textarea type="text" name="Description" class="form-control-plaintext" id="exampleFormControlTextarea1" rows="3" readonly>
-      <%=Description %>
-    </textarea>
-  </div>
-  <center> 
-    <a class="btn btn-primary" href="/review/update/<%=Page_ID%>">글수정</a>
-  </center>
-   
-   
+    <form action="/review/create_process" method="post">
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">제목</label>
+        <input type="text" name="Title" class="form-control" id="exampleFormControlInput1" placeholder="제목">
+      </div>
+      <div class="mb-3">
+        <label placeholder="Title" for="exampleFormControlTextarea1" class="form-label">환불 사유</label>
+        <textarea type="text" name="Description" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+        <center><input type="submit"  class="btn btn-primary" value="등록하기"/></center> 
+    </form>
+  </br>
   </body>
- 
   <!-- Footer-->
   <footer class="bg-light py-5">
     <div class="container px-4 px-lg-5"><div class="small text-center text-muted"><a href="/policy/private">개인정보처리방침</a> | <a href="/policy/tos">이용약관</a></div></div>
@@ -97,10 +92,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
 <!-- Core theme JS-->
 <script src="../js/scripts.js"></script>
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-<!-- * *                               SB Forms JS                               * *-->
-<!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
 <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
