--- a/views/review_page_create.ejs
+++ b/views/review_page_create.ejs
@@ -65,41 +65,18 @@
           </div>
       </div>
   </header>
-  <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">제목</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="제목">
-  </div>
-  <div class="mb-3">
-    <label for="exampleFormControlTextarea1" class="form-label">내용</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-  </div>
     <form action="/review/create_process" method="post">
-      <p><input type="text" name="Title" placeholder="Title" /></p>
-      <p>
-        <textarea name="Description" placeholder="Description"></textarea>
-      </p>
-      <p><%-Nickname %></p>
-      <p>
-        <input type="submit" />
-      </p>
-    </form>
-    <div id="board-list">
-      <div class="container">
-        <table class="board-table">
-          <thead>
-            <tr>
-              <th scope="col" class="th-num">번호</th>
-              <th scope="col" class="th-title">제목</th>
-              <th scope="col" class="th-date">등록일</th>
-            </tr>
-          </thead>
-          <tbody>
-            <%-List %>
-          </tbody>
-        </table>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">제목</label>
+        <input type="text" name="Title" class="form-control" id="exampleFormControlInput1" placeholder="제목">
       </div>
-    </div>
-    <a href="/review/create">글생성</a>
+      <div class="mb-3">
+        <label placeholder="Title" for="exampleFormControlTextarea1" class="form-label">내용</label>
+        <textarea type="text" name="Description" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+        <center><input type="submit"  class="btn btn-primary" value="등록하기"/></center> 
+    </form>
+  </br>
   </body>
   <!-- Footer-->
   <footer class="bg-light py-5">
@@ -114,11 +91,7 @@
 <!-- SimpleLightbox plugin JS-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
 <!-- Core theme JS-->
-<script src="js/scripts.js"></script>
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-<!-- * *                               SB Forms JS                               * *-->
-<!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+<script src="../js/scripts.js"></script>
 <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
