환불페이지 구현 완료

--- a/views/enroll_cart.ejs
+++ b/views/enroll_cart.ejs
@@ -183,6 +183,9 @@
         <ul>
           <li>장바구니 강의는 최대 30일간 저장됩니다.</li>
           <li>강의 신청은 선착순으로 진행됩니다.</li>
+          <li>
+            강의를 한 번 이상 들을 시 사용하신 포인트는 환불되지 않습니다.
+          </li>
         </ul>
       </div>
     </section>
