--- a/views/my_page_root.ejs
+++ b/views/my_page_root.ejs
@@ -287,7 +287,7 @@
               <tr>
                 <th scope="col" class="th-title">강좌명</th>
                 <th scope="col" class="th-date">강의 시간</th>
-                <th scope="col" class="th-date">결제 횟수</th>
+                <th scope="col" class="th-date">결제 강의 횟수</th>
                 <th scope="col" class="th-date">선생님</th>
                 <th scope="col" class="th-date">결제 시간</th>
                 <th scope="col" class="th-date">환불</th>
