--- a/views/refund_page.ejs
+++ b/views/refund_page.ejs
@@ -3,16 +3,32 @@
   <head>
     <title>Login TEST - ${title}</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap Icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
+      rel="stylesheet"
+      type="text/css"
+    />
     <!-- SimpleLightbox plugin CSS-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css"
+      rel="stylesheet"
+    />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="../CSS/styles.css" rel="stylesheet" />
     <script
@@ -23,6 +39,23 @@
       type="text/javascript"
       src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"
     ></script>
+    <style>
+      .cart {
+        width: 53%;
+        margin: auto;
+        padding: 30px;
+      }
+
+      .cart ul {
+        background-color: whitesmoke;
+        padding: 30px;
+        margin-bottom: 50px;
+        border: whitesmoke solid 1px;
+        border-radius: 5px;
+        font-size: 15px;
+        font-weight: 300;
+      }
+    </style>
   </head>
   <body>
     <div class="loader-wrapper">
@@ -35,63 +68,219 @@
       });
     </script>
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+    <nav
+      class="navbar navbar-expand-lg navbar-light fixed-top py-3"
+      id="mainNav"
+    >
       <div class="container px-4 px-lg-5">
-          <a class="navbar-brand" href="#page-top">Coding-nara</a>
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-              <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                  <li class="nav-item"><a class="nav-link" href="/">소개</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/curriculum">커리큘럼</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/enroll/sub">수강신청</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/review">강좌후기</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/ask">고객센터</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/login"><%-authCheck %></a></li>
-              </ul>
-          </div>
+        <a class="navbar-brand" href="#page-top">Coding-nara</a>
+        <button
+          class="navbar-toggler navbar-toggler-right"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ms-auto my-2 my-lg-0">
+            <li class="nav-item"><a class="nav-link" href="/">소개</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="/curriculum">커리큘럼</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/enroll/sub">수강신청</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/review">강좌후기</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/ask">고객센터</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/login"><%-authCheck %></a>
+            </li>
+          </ul>
+        </div>
       </div>
-  </nav>
-  <!-- Masthead-->
-  <header class="masthead_review">
+    </nav>
+    <!-- Masthead-->
+    <header class="masthead_review">
       <div class="container px-4 px-lg-5 h-100">
-          <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-              <div class="col-lg-8 align-self-end">
-                  <h1 class="text-white font-weight-bold">강좌후기</h1>
-                  <hr class="divider" />
-              </div>
-              <div class="col-lg-8 align-self-baseline">
-                  <p class="text-white-75 mb-5">우리 아이에 적합한 교육 서비스를 경험해보세요</p>
-              </div>
+        <div
+          class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center"
+        >
+          <div class="col-lg-8 align-self-end">
+            <h1 class="text-white font-weight-bold">환불하기</h1>
+            <hr class="divider" />
           </div>
+          <div class="col-lg-8 align-self-baseline">
+            <p class="text-white-75 mb-5">저희 서비스에 불만족을 느끼셨나요?</p>
+          </div>
+        </div>
       </div>
-  </header>
-    <form action="/review/create_process" method="post">
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">제목</label>
-        <input type="text" name="Title" class="form-control" id="exampleFormControlInput1" placeholder="제목">
+    </header>
+    <br />
+    <br />
+    <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
+      <div class="col-lg-6">
+        <form id="contactForm" action="/myinfo/refund_db" method="post">
+          <!-- Name input-->
+          <div class="form-floating mb-3">
+            <div class="row g-4">
+              <div class="col-md">
+                <div class="form-floating">
+                  <input
+                    class="form-control"
+                    id="course"
+                    name="course"
+                    type="text"
+                    value="<%=Subject%>"
+                    data-sb-validations="required"
+                    readonly
+                  />
+                  <label for="name"
+                    >강좌<span class="text-danger"></span
+                  ></label>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="form-floating">
+                  <input
+                    class="form-control"
+                    id="teacher"
+                    name="teacher"
+                    type="text"
+                    data-sb-validations="required"
+                    value="<%=Teacher%>"
+                    readonly
+                  />
+
+                  <label for="name"
+                    >선생님<span class="text-danger"></span
+                  ></label>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="form-floating">
+                  <input
+                    class="form-control"
+                    id="time"
+                    name="time"
+                    type="text"
+                    value="<%=Time%>"
+                    data-sb-validations="required"
+                    readonly
+                  />
+                  <label for="name"
+                    >시간<span class="text-danger"></span
+                  ></label>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="form-floating">
+                  <input
+                    class="form-control"
+                    id="day"
+                    name="day"
+                    type="text"
+                    value="<%=Day%>"
+                    data-sb-validations="required"
+                    readonly
+                  />
+                  <label for="name"
+                    >요일<span class="text-danger"></span
+                  ></label>
+                </div>
+              </div>
+            </div>
+            <br />
+            <div class="mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label"
+                >환불 사유</label
+              >
+              <br />
+              <input
+                class="form-control form-control-lg"
+                id="reason"
+                name="reason"
+                type="text"
+                data-sb-validations="required"
+                placeholder="환불 사유 입력"
+              />
+              <!-- <textarea
+                  class="form-control"
+                  id="reason"
+                  name="reason"
+                  id="reason"
+                  rows="3"
+                ></textarea> -->
+            </div>
+          </div>
+
+          <center>
+            <input type="submit" class="btn btn-danger" value="환불하기" />
+          </center>
+        </form>
       </div>
-      <div class="mb-3">
-        <label placeholder="Title" for="exampleFormControlTextarea1" class="form-label">환불 사유</label>
-        <textarea type="text" name="Description" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+
+    <section class="cart">
+      <div class="cart__information">
+        <ul>
+          <li>
+            강의를 한 번 이상 들을 시 사용하신 포인트는 환불되지 않습니다.
+          </li>
+          <li>
+            <span
+              >환불은
+              <a
+                href="https://easylaw.go.kr/CSP/CnpClsMain.laf?popMenu=ov&csmSeq=1140&ccfNo=4&cciNo=2&cnpClsNo=1"
+                >환불 규정</a
+              >
+              내용을 따릅니다.</span
+            >
+          </li>
+          <li>환불 소요 시간은 최대 7일 소요됩니다.</li>
+        </ul>
       </div>
-        <center><input type="submit"  class="btn btn-primary" value="등록하기"/></center> 
-    </form>
-  </br>
+    </section>
+    <br />
   </body>
   <!-- Footer-->
   <footer class="bg-light py-5">
-    <div class="container px-4 px-lg-5"><div class="small text-center text-muted"><a href="/policy/private">개인정보처리방침</a> | <a href="/policy/tos">이용약관</a></div></div>
-    <div class="container px-4 px-lg-5"><div class="small text-center text-muted">코딩나라 | 대표자: 장영재, 박민수 | 사업자번호: 148-14-01860 사업자 정보 확인</div></div>
-    <div class="container px-4 px-lg-5"><div class="small text-center text-muted">주소: 서울특별시 서대문구 북가좌동</div></div>
-    <br>
-    <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy;코딩나라(Coding-nara)</div></div>
-</footer>
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- SimpleLightbox plugin JS-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
-<!-- Core theme JS-->
-<script src="../js/scripts.js"></script>
-<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-</body>
+    <div class="container px-4 px-lg-5">
+      <div class="small text-center text-muted">
+        <a href="/policy/private">개인정보처리방침</a> |
+        <a href="/policy/tos">이용약관</a> |
+      </div>
+    </div>
+    <div class="container px-4 px-lg-5">
+      <div class="small text-center text-muted">
+        코딩나라 | 대표자: 장영재, 박민수 | 사업자번호: 148-14-01860 사업자 정보
+        확인
+      </div>
+    </div>
+    <div class="container px-4 px-lg-5">
+      <div class="small text-center text-muted">
+        주소: 서울특별시 서대문구 북가좌동
+      </div>
+    </div>
+    <br />
+    <div class="container px-4 px-lg-5">
+      <div class="small text-center text-muted">
+        Copyright &copy;코딩나라(Coding-nara)
+      </div>
+    </div>
+  </footer>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- SimpleLightbox plugin JS-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="../js/scripts.js"></script>
+  <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </html>
